tests/PhiCore/compile_failure/src/container/array/no_deduction.fail.cpp
#include <phi/container/array.hpp>

int main()
{
    phi::array arr{1, 2, 3L};
}
